iac/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dso-courses-api-service
  labels:
    app: dso-courses-api
spec:
  type: ClusterIP  # Internal only, not exposed externally
  selector:
    app: dso-courses-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: http
